Copy oxapi_demo from omicron in client gen script (#505)
* copy oxapi_demo from omicron in client gen script, upgrade omicron

* bump packer image
