# libs/api/__generated__/models/index.ts
@@ -49,6 +49,7 @@ export * from './VpcCreateParams'
 export * from './VpcResultsPage'
 export * from './VpcRouter'
 export * from './VpcRouterCreateParams'
+export * from './VpcRouterKind'
 export * from './VpcRouterResultsPage'
 export * from './VpcRouterUpdateParams'
 export * from './VpcSubnet'
